--- a/js-example/main.html
+++ b/js-example/main.html
@@ -5,18 +5,19 @@
     </head>
     <body>
         <form action="#" class="ql-form">
+            <div data-ql-question="bar">
+                <label for="bar">the bar</label>
+                <input name="bar" type="checkbox" />
+            </div>
+
             <div data-ql-question="foo" data-ql-question-visible-when="bar">
                 <label for="foo">the foo</label>
                 <input name="foo" type="number" />
             </div>
 
-            <div data-ql-question="bar">
-            <label for="bar">the bar</label>
-            <input name="bar" type="checkbox" />
-            </div>
-
-            <div data-ql-question="foo" data-computed-question="true">
-                <input name="foo" type="text" disabled="disabled" />
+            <div data-ql-question="foo_c" data-computed-question="true" data-ql-question-visible-when="bar_c">
+                <label for="foo_c">This is a computed question</label>
+                <input name="foo_c" type="number" disabled="disabled" />
             </div>
         </form>
 
